gccida/g2/assemble_zeros
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_zeros/src/varasm.c:1745:6: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
if ( in_section_0 == in_text ) 
     ^~~~~~~~~~~~
     in_section
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_zeros/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/assemble_zeros/src/obj/varasm.o] Error 1
